fix(breadcrumbs): overflow handling to include first item negative margin (#DS-4909)

--- a/packages/components/breadcrumbs/breadcrumbs.scss
+++ b/packages/components/breadcrumbs/breadcrumbs.scss
@@ -27,10 +27,6 @@
         flex-wrap: wrap;
     }
 
-    &:not(.kbq-breadcrumbs_wrap) {
-        overflow: hidden;
-    }
-
     &.kbq-breadcrumbs_compact {
         .kbq-breadcrumb-item {
             &.kbq-button,
